Cambios esteticos, prueba Angular Material

--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -19,7 +19,7 @@
         src="../../../assets/imagenes/saladejuegos_dlp.png"
       />
       <div class="d-flex justify-content-between">
-        <h5 class="mb-1">Juegos</h5>
+        <h5 class="mb-1 title" style="font-size: medium">Juegos</h5>
       </div>
       <p class="mb-1">
         El método lúdico es un conjunto de estrategias diseñadas para crear un
@@ -39,7 +39,7 @@
         />
       </div>
       <div class="d-flex justify-content-between">
-        <h5 class="mb-1">Listados de resultados</h5>
+        <h5 class="mb-1 title">Listados de resultados</h5>
       </div>
       <p class="mb-1">
         Los listados de los resultados con ordenamiento y busqueda
@@ -56,7 +56,7 @@
         />
       </div>
       <div class="d-flex justify-content-between">
-        <h5 class="mb-1">Configuraci&oacute;n</h5>
+        <h5 class="mb-1 title">Configuraci&oacute;n</h5>
       </div>
       <p class="mb-1">
         Ajustes de la aplicacion y los métodos de autentificación
@@ -73,7 +73,7 @@
         />
       </div>
       <div class="d-flex justify-content-between">
-        <h5 class="mb-1">Jugadores</h5>
+        <h5 class="mb-1 title">Jugadores</h5>
       </div>
       <p class="mb-1">Listado de jugadores</p>
     </a>
