--- a/src/app/componentes/cabecera/cabecera.component.html
+++ b/src/app/componentes/cabecera/cabecera.component.html
@@ -1,5 +1,5 @@
 <div class="header">
   <div class="content">
-    <h1>Sala de Juegos</h1>
+    <h1 style="color: blanchedalmond">Sala de Juegos</h1>
   </div>
 </div>
