--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -18,17 +18,7 @@
         <a class="nav-link" routerLink="/Principal">Menú</a>
       </li>
       <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          href="#"
-          id="navbarDropdown"
-          role="button"
-          data-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false"
-        >
-          Juegos
-        </a>
+        <a class="nav-link dropdown-toggle"> Juegos </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" routerLink="/Juegos/Agilidad">Agilidad</a>
           <a class="dropdown-item" routerLink="/Juegos/Adivina">Adivina</a>
